test-cases/final-dump/trait_impl_non_trait.wybe
constructor my_type

impl int
